// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableToolbar matches snapshot with no selected items 1`] = `
<div
  className="MuiToolbar-root-6 MuiToolbar-regular-8 MuiToolbar-gutters-7 TableToolbar-root-1"
>
  <div
    className="TableToolbar-title-5"
  >
    <div>
      <h6
        className="MuiTypography-root-10 MuiTypography-h6-27"
      >
        Transactions
      </h6>
      <span
        className="MuiTypography-root-10 MuiTypography-caption-20"
      />
    </div>
  </div>
  <div
    className="TableToolbar-spacer-3"
  />
  <div
    className="TableToolbar-actions-4"
  />
</div>
`;

exports[`TableToolbar matches snapshot with some selected items 1`] = `
<div
  className="MuiToolbar-root-6 MuiToolbar-regular-8 MuiToolbar-gutters-7 TableToolbar-root-1 TableToolbar-highlight-2"
>
  <div
    className="TableToolbar-title-5"
  >
    <h6
      className="MuiTypography-root-10 MuiTypography-subtitle1-28 MuiTypography-colorInherit-39"
    >
      1
      selected
    </h6>
  </div>
  <div
    className="TableToolbar-spacer-3"
  />
  <div
    className="TableToolbar-actions-4"
  >
    <div>
      Content 1
    </div>
    <div>
      Content 2
    </div>
  </div>
</div>
`;
